# src/meetings/dto/create-meeting.dto.ts
@@ -19,6 +19,14 @@ export class CreateMeetingDto {
   question: string;
 
   @ApiProperty({
+    description: 'Дата и время встречи',
+    example: '2026-02-11T00:00:00.000Z',
+  })
+  @IsOptional()
+  @IsString()
+  upcomingDate: string;
+
+  @ApiProperty({
     description: 'ID участников встречи',
     example: ['507f1f77bcf86cd799439011', '507f1f77bcf86cd799439012'],
     required: false,
